; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/brocade/bna/extr_bna_enet.c_bna_ethport_sm_last_resp_wait.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/brocade/bna/extr_bna_enet.c_bna_ethport_sm_last_resp_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bna_ethport = type { i32 }

@bna_ethport_sm_stopped = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bna_ethport*, i32)* @bna_ethport_sm_last_resp_wait to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bna_ethport_sm_last_resp_wait(%struct.bna_ethport* %0, i32 %1) #0 {
  %3 = alloca %struct.bna_ethport*, align 8
  %4 = alloca i32, align 4
  store %struct.bna_ethport* %0, %struct.bna_ethport** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  switch i32 %5, label %18 [
    i32 131, label %6
    i32 132, label %10
    i32 128, label %11
    i32 129, label %14
    i32 130, label %14
  ]

6:                                                ; preds = %2
  %7 = load %struct.bna_ethport*, %struct.bna_ethport** %3, align 8
  %8 = load i32, i32* @bna_ethport_sm_stopped, align 4
  %9 = call i32 @bfa_fsm_set_state(%struct.bna_ethport* %7, i32 %8)
  br label %21

10:                                               ; preds = %2
  br label %21

11:                                               ; preds = %2
  %12 = load %struct.bna_ethport*, %struct.bna_ethport** %3, align 8
  %13 = call i32 @bna_bfi_ethport_down(%struct.bna_ethport* %12)
  br label %21

14:                                               ; preds = %2, %2
  %15 = load %struct.bna_ethport*, %struct.bna_ethport** %3, align 8
  %16 = load i32, i32* @bna_ethport_sm_stopped, align 4
  %17 = call i32 @bfa_fsm_set_state(%struct.bna_ethport* %15, i32 %16)
  br label %21

18:                                               ; preds = %2
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @bfa_sm_fault(i32 %19)
  br label %21

21:                                               ; preds = %18, %14, %11, %10, %6
  ret void
}

declare dso_local i32 @bfa_fsm_set_state(%struct.bna_ethport*, i32) #1

declare dso_local i32 @bna_bfi_ethport_down(%struct.bna_ethport*) #1

declare dso_local i32 @bfa_sm_fault(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
